# cycling_trainer

./: .gitignore  .prettierrc  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
old/src/: main.rs
src/: App.svelte  main.rs  main.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  prelude.rs
src-tauri/src/ble/: bluetooth.rs  constants.rs  event_handlers.rs  heart_rate_measurement.rs  mod.rs  utils.rs
src-tauri/src/data/: heart_rate_measurement.rs  indoor_bike_data.rs  mod.rs  session.rs  simulation.rs
src-tauri/src/system/: directory.rs  mod.rs  user.rs
src-tauri/src/utils/: bluetooth_utils.rs  byte.rs  code_values.rs  mod.rs
src-tauri/src/workouts/: activities.rs  mod.rs  reader.rs  workout.rs  zwo.rs
src/ble/: bluetooth.rs  mod.rs
src/bootstrap/: index.ts  listeners.ts  settings.ts
src/components/: Nav.svelte  Splash.svelte
src/components/Navigation/: index.svelte  styles.css
src/lib/: Bluetooth.svelte  FindDevice.svelte  Greet.svelte
src/pages/: PairedDevices.svelte
src/pages/Activities/: index.svelte  styles.css
src/pages/Activities/components/: Activity.svelte  List.svelte
src/pages/Devices/: index.svelte  styles.css
src/pages/Devices/components/: DeviceCard.svelte  ScanList.svelte  Spindown.svelte
src/pages/Main/: index.svelte
src/pages/PairedDevices/: index.svelte  styles.css
src/pages/PairedDevices/components/: ScanList.svelte
src/pages/Workout/: index.svelte  styles.css
src/pages/Workout/components/: DataView.svelte  HeartRateChart.svelte  Menu.svelte  PowerChart.svelte  SimulationActions.svelte  (+3 more)
src/stores/: activities.ts  appUser.ts  devices.ts  useTimer.ts
src/utils/: clickOutside.ts  common.ts  data.ts  time.ts  zones.ts
workouts/: sample.json  sample.zwo
(+1 files in other folders)
