[package]
name = "cycling_trainer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.1", features = ["full"] }
btleplug = "0.10.5"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
uuid = "1.3.3"
thiserror = "1.0.40"
quick-xml = { version = "0.29.0", features = ["serialize"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rand = "0.8.5"
dirs = "3.0"


[dev-dependencies]
anyhow = "1.0.71"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
